<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarkCreatorFragment"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/mode_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/grade_mode_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_radio_button"
                android:textColor="@color/city_lights"
                android:buttonTint="@color/city_lights"/>

            <RadioButton
                android:id="@+id/points_mode_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_radio_button"
                android:textColor="@color/city_lights"
                android:buttonTint="@color/city_lights"/>
        </RadioGroup>

        <Spinner
            android:id="@+id/mark_creator_grade_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:backgroundTint="@color/city_lights"/>

        <EditText
            android:id="@+id/mark_creator_points_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/points_hint"
            android:visibility="gone"
            android:theme="@style/EditTextTheme"/>
    </LinearLayout>

    <Button
        android:id="@+id/mark_creator_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_mark_button"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>