<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_id_textview"/>

        <TextView
            android:id="@+id/student_list_item_id_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12345678"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/student_list_item_firstname_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kacper"/>

        <TextView
            android:id="@+id/student_list_item_lastname_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Grabiec"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/student_list_item_go_to_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"/>
    </LinearLayout>
</LinearLayout>